gitea/gitea-route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    description: Route for application's http service.
  labels:
    app: gitea
  name: gitea
spec:
  to:
    kind: Service
    name: gitea
